Template Wor4j Updating Java to Java11